--- a/image-generation-in-action.ipynb
+++ b/image-generation-in-action.ipynb
@@ -62,7 +62,7 @@
    "id": "9e6cc16f",
    "metadata": {},
    "source": [
-    "### Import the libraries and enviornment file to gain access to the Open API Key\n",
+    "### Import the libraries and environment file to gain access to the Open API Key\n",
     "#### The key can be generated here: https://platform.openai.com/account/api-keys"
    ]
   },
