--- a/image-generation-in-action.ipynb
+++ b/image-generation-in-action.ipynb
@@ -5,7 +5,7 @@
    "id": "432ba143",
    "metadata": {},
    "source": [
-    "# See Image Generation in Action\n",
+    "# OpenAI API: Image Generation with DALL-E\n",
     "## 03_03"
    ]
   },
